# fastAPI_app

./: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 01eac9a6ac2b_add_foreign_table_to_post_table.py  184d40a8b67b_add_user_table.py  3ffc1a29a06b_add_content_column_to_post_table.py  6e92affd7d58_add_phone_number_users.py  a9eacf69b299_create_posts_table.py  b6486519241e_add_new_cols_in_posts.py  fe357cd5d521_auto_vote.py
app/: calculations.py  config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
postgres/: postmaster.pid
postgres/base/13756/: pg_internal.init
postgres/base/16384/: 1247  1249  1249_fsm  1259  1259_vm  16385  16386  16391  16403  16409  16410  16412  16413  16420  16421  16434  16435  16441  16442  16444  2224  24576  24578  24579  24580  24627  24628  24635  24636  24653  24656  2579  2604  2606  2608  2610  2619  2619_fsm  2619_vm  2620  (+23 more)
postgres/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
postgres/pg_stat_tmp/: db_0.stat  db_13756.stat  db_16384.stat  global.stat
postgres/pg_xact/: 0000
tests/: test_add.py  test_users.py
