[tool.poetry]
name = "fastapi_poetry_project"
version = "0.1.0"
description = ""
authors = ["Rachit Gupta <rachit.gupta@trivago.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
requests = "^2.28.1"
SQLAlchemy = "^1.4.40"
email-validator = "^1.2.1"
bcrypt = "^3.2.2"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
python-dotenv = "^0.20.0"
alembic = "^1.8.1"
pytest = "^7.1.3"


[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
